--- a/standard-crud-sample-web/src/main/webapp/resources/app/css/styles.css
+++ b/standard-crud-sample-web/src/main/webapp/resources/app/css/styles.css
@@ -1,7 +1,7 @@
 /* @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700); */
 
 body {
-  padding:50px;
+  padding-top: 70px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
@@ -96,7 +96,6 @@ img {
 }
 
 header {
-  width:270px;
   float:left;
   position:fixed;
 }
@@ -177,10 +176,10 @@ hr {
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
+  margin-top: 10px;
+  border-top: groove;
+  height: 30px;
+  text-align: center;
 }
 
 .paginationContainer {
