--- a/standard-crud-sample-web/src/main/webapp/resources/app/css/styles.css
+++ b/standard-crud-sample-web/src/main/webapp/resources/app/css/styles.css
@@ -191,6 +191,10 @@ span.form-control {
     -webkit-box-shadow: none;
 }
 
+[class$="error"], [id$="errors"] {
+    color: #ff0000;
+}
+
 @media print, screen and (max-width: 960px) {
   
   div.wrapper {
